# expense-tracker-app

./: .env.example  .gitignore  CLAUDE.md  setup.md
.claude/: settings.json  settings.local.json
.claude/agent-memory/reviewer/: MEMORY.md
.claude/agents/: coder.md  reviewer.md
.claude/rules/: security.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_users.py  002_categories.py  003_accounts.py  004_transactions.py  005_recurring.py  006_budgets.py  007_investments.py  008_screenshots.py  009_audit.py  010_seed_categories.py
backend/app/: main.py
backend/app/auth/: dependencies.py  models.py  oauth.py  otp.py  router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  exceptions.py  limiter.py  middleware.py  rate_limit.py  redis.py  security.py  storage.py
backend/app/tasks/: celery_app.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_flow.py  test_otp_flow.py  test_rls_isolation.py
backend/tests/unit/: test_auth_dependencies.py  test_auth_endpoints.py  test_auth_service.py  test_health.py  test_oauth.py  test_otp.py  test_otp_endpoints.py  test_phone_user_service.py  test_rate_limit.py  test_security.py
docker/: docker-compose.prod.yml  docker-compose.yml
docker/caddy/: Caddyfile
docker/pgbouncer/: pgbouncer.ini
docker/postgres/: init.sql
docker/redis/: redis.conf
docs/: architecture.md  epics-and-stories.md  security.md
tasks/: lessons.md  todo.md
(+3 files in other folders)
